typescript/checker/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration1.ts.stderr
error: UndefinedSymbol {
    sym: Atom('A' type=inline),
    span: Span {
        lo: BytePos(
            16,
        ),
        hi: BytePos(
            17,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration1.ts:1:17
  |
1 | class C extends A extends B {
  |                 ^

error: TS1172
 --> $DIR/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration1.ts:1:19
  |
1 | class C extends A extends B {
  |                   ^^^^^^^

